CrashHandler.java: 增加了app崩溃收集
LogLevel.java:
增加了新的级别Crash

Settings.java:
增加了日志压缩包保存路径
增加了日志缓存大小（默认10m）
修改了默认日志保存路径（避免没有存储卡出错）

CompressUtil.java:
增加zip压缩工具类

DefaultPrinter.java:
对Crash的print额外处理

FileUtils.java:
增加了获取文件夹大小和清空文件夹的方法

LogUtils.java:
增加了生成崩溃日志文件名的方法

PrinterUtils.java:
增加了打印崩溃日志到文件的方法

JLog.java:
增加了检查日志缓存是否超过限制，超过则清空的方法
增加了清空缓存文件夹的方法
增加了将日志文件夹生成zip的方法

sample/MainActivity.java:
demo添加了两个按钮(Crash和ZipLog)

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -38,4 +38,18 @@
             android:layout_marginTop="@dimen/margin"
             android:onClick="logProguard"
             android:text="@string/log_proguard"/>
+
+    <Button style="@style/ButtonStyle.Blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:onClick="logCrash"
+            android:text="@string/log_crash"/>
+
+    <Button style="@style/ButtonStyle.Blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:onClick="ziplog"
+            android:text="@string/ziplog"/>
 </LinearLayout>
